HTKAligner: improve UX and logging, ensure full-graph media isn't renamed.

--- a/annotator/htk/src/main/resources/nzilbb/annotator/htk/task/index.css
+++ b/annotator/htk/src/main/resources/nzilbb/annotator/htk/task/index.css
@@ -35,6 +35,7 @@ label:after {
 }
 .field input[type="number"] {
     width: 75px;
+    text-align: right;
 }
 
 footer {
